Fixed issue with tooltip not showing up for conditionally rendered buttons

--- a/gui/src/components/Controls/Controls.css
+++ b/gui/src/components/Controls/Controls.css
@@ -55,7 +55,7 @@
     background-image: url(sign-out.svg);
 }
 
-.icon-custom-terminate {
+.icon-custom-shutdown {
     background-image: url(terminate.svg);
 }
 
